[server] Add admin db copy #895 (#921)
Add admin API endpoint for copying database
